src/objects/LodeStarIntegrationSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The Integration settings for LodeStar</description>
    <fields>
        <fullName>BatchAccountLimit__c</fullName>
        <description>The maximum number of accounts that should be picked up in a single LodeStar integration process run.</description>
        <inlineHelpText>The maximum number of accounts that should be picked up in a single LodeStar integration process run.</inlineHelpText>
        <label>Batch Account Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorEndpoint__c</fullName>
        <description>the Endpoint of the Webservice to check for LodeStar Integration Errors.</description>
        <inlineHelpText>the Endpoint of the Webservice to check for LodeStar Integration Errors.</inlineHelpText>
        <label>Error Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IntegrationEndpoint__c</fullName>
        <description>the URL of the Endpoint to post Webservice messages regarding the integration to.</description>
        <inlineHelpText>the URL of the Endpoint to post Webservice messages regarding the integration to.</inlineHelpText>
        <label>Integration Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NotificationEmail__c</fullName>
        <description>Email address to send notifications to - such as errors or messages.</description>
        <inlineHelpText>Email address to send notifications to - such as errors or messages.</inlineHelpText>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PayloadSizeLimit__c</fullName>
        <description>The limit to the size in MB a single Callout Transaction can be.  This is to avoid building a message too big to send in a single callout.</description>
        <inlineHelpText>The limit to the size in MB a single Callout Transaction can be.  This is to avoid building a message too big to send in a single callout.</inlineHelpText>
        <label>Payload Size Limit (MB)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LodeStar Integration Setting</label>
</CustomObject>